Crash in WebCore::logPluginRequest + 183 https://bugs.webkit.org/show_bug.cgi?id=95218

Reviewed by Oliver Hunt.

Crash is within findPluginMIMETypeFromURL, caused by a null-dereference of
page()->pluginData().  Add a null-check and return an empty string.

* loader/SubframeLoader.cpp:
(WebCore::findPluginMIMETypeFromURL):

Canonical link: https://commits.webkit.org/113098@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126921 268f45cc-cd09-0410-ab3c-d52691b4dbfc